--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div class="container">
   <div class="header-container">
-    <div class="sign-in-button" routerLink="/sign-in">Sign In</div>
     <div>
       <div class="home-button" routerLink="/"></div>
     </div>
+
+    <ng-container *ngIf="!authorized">
+      <div class="sign-in-button" routerLink="/sign-in">Sign In</div>
+    </ng-container>
   </div>
   <router-outlet></router-outlet>
 </div>
