Add header separator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
       <div class="sign-in-button" routerLink="/sign-in">Sign In</div>
     </ng-container>
   </div>
+  <div class="horizontal-line"></div>
   <router-outlet></router-outlet>
 </div>
