--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,8 @@
 .header-container {
   padding-left: 20px;
   padding-right: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   height: 64px;
 
   display: flex;
@@ -21,8 +22,7 @@
   top: 0;
   z-index: 100;
 
-  background: #e9e9e9;
-  border-radius: 6px;
+  background: white;
 }
 
 .home-button {
@@ -36,4 +36,12 @@
 
 .sign-in-button {
   cursor: pointer;
+}
+
+.horizontal-line {
+  margin: 0 auto;
+  margin-bottom: 20px;
+  height: 0px;
+  width: 1800px;
+  border-bottom: 1px solid dimgrey;
 }
