--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,7 +30,7 @@
   height: 48px;
 
   cursor: pointer;
-  background-image: url('../assets/img/logo-blue.svg');
+  background-image: url('../assets/logo/logo-blue.svg');
   background-size: contain;
 }
 
