--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,17 +12,21 @@
   padding-right: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
-  height: 64px;
+  height: 69px;
 
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  gap: 60px;
   position: sticky;
   top: 0;
   z-index: 100;
 
   background: white;
+}
+
+.header {
+  margin: 20px auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 60px;
 }
 
 .home-button {
