--- a/src/app/ui/advertisement/advertisement.component.html
+++ b/src/app/ui/advertisement/advertisement.component.html
@@ -10,11 +10,13 @@
   <div class="ad-catalog">
     <h3 class="ad-catalog__title">{{ ad.title }}</h3>
     <div class="ad-catalog__body">
-      <p class="ad-catalog__description">{{ ad.description }}</p>
+      <div class="ad-catalog__description-container">
+        <p class="ad-catalog__description">{{ ad.description }}</p>
+      </div>
     </div>
     <div class="ad-catalog__image-container">
       <img class="ad-catalog__image" src="{{ ad.imagePathList[0] }}" alt="{{ ad.id }}" />
     </div>
-    <div class="ad-catalog__price">{{ ad.price }}</div>
+    <div class="ad-catalog__price">USD {{ ad.price }}</div>
   </div>
 </ng-template>
