--- a/src/app/ui/advertisement/advertisement-catalog.component.scss
+++ b/src/app/ui/advertisement/advertisement-catalog.component.scss
@@ -61,7 +61,8 @@
   }
 
   &__price {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',
+      Geneva, Verdana, sans-serif;
     font-size: 20px;
     margin-top: 20px;
   }
