--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,7 +51,7 @@
 
 .horizontal-line {
   margin: 0 auto;
-  margin-bottom: 20px;
+  margin-bottom: 0;
   height: 0px;
   width: 1800px;
   border-bottom: 1px solid dimgrey;
