--- a/src/app/ui/advertisement/advertisement.component.html
+++ b/src/app/ui/advertisement/advertisement.component.html
@@ -17,6 +17,6 @@
     <div class="ad-catalog__image-container">
       <img class="ad-catalog__image" src="{{ ad.imagePathList[0] }}" alt="{{ ad.id }}" />
     </div>
-    <div class="ad-catalog__price">USD {{ ad.price }}</div>
+    <div class="ad-catalog__price">USD {{ ad.price }} per month</div>
   </div>
 </ng-template>
