--- a/src/app/ui/advertisement-list/advertisement-list.component.scss
+++ b/src/app/ui/advertisement-list/advertisement-list.component.scss
@@ -33,19 +33,14 @@ input {
 
   &__price {
     display: flex;
+    align-items: baseline;
     gap: 10px;
 
     &--lower,
     &--higher {
-      width: 120px;
-      height: 24px;
+      margin: 0;
 
       font-size: 18px;
-      padding: 0 10px;
-
-      border: 1px solid dimgrey;
-      border-radius: 3px;
-      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     }
   }
 
@@ -64,5 +59,16 @@ input {
 
     margin-top: 20px;
     user-select: none;
+  }
+
+  &__area {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 40px;
+
+    &--input {
+      margin: 0;
+    }
   }
 }
