Add view toggle button

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,3 @@
 <ng-container *ngIf="!authorized"></ng-container>
 
-<app-advertisement-list
-  [adList]="commonAdvertisementList"
-  [adListViewType]="'grid'"
-></app-advertisement-list>
+<app-advertisement-list [adList]="commonAdvertisementList"></app-advertisement-list>
