--- a/src/app/ui/advertisement-list/advertisement-list.component.scss
+++ b/src/app/ui/advertisement-list/advertisement-list.component.scss
@@ -20,8 +20,23 @@ input {
 }
 
 .ad-container--center {
-  margin: 0 auto;
+  margin: 0 200px;
   width: 50%;
+}
+
+.list-view-control {
+  width: 40px;
+  height: 30px;
+
+  padding-top: 4px;
+  margin: 40px 40px;
+  margin-left: 20px;
+  text-align: center;
+
+  border: 1px solid dimgrey;
+  background-color: rgb(243, 243, 243);
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .filter {
@@ -30,6 +45,7 @@ input {
 
   width: 20%;
   margin: 40px 60px;
+  margin-right: 10px;
 
   &__price {
     display: flex;
