Add account page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </ng-container>
 
       <ng-container *ngIf="authorized">
-        <div class="header-button account-button"></div>
+        <div class="header-button account-button" routerLink="/account"></div>
       </ng-container>
     </div>
     <div class="horizontal-line"></div>
