Add favs page Fix rxjs expression

--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="control-zone">
-    <div class="control control--favorites">
+    <div class="control control--favorites" routerLink="favorites">
       <mat-icon matTooltip="F a v o r i t e s" matSuffix>star</mat-icon>
     </div>
     <div class="control control--exit" (click)="exitApp()">
