--- a/src/app/ui/advertisement/advertisement-catalog.component.scss
+++ b/src/app/ui/advertisement/advertisement-catalog.component.scss
@@ -26,11 +26,12 @@
     margin-bottom: 10px;
 
     &--title {
-      font-size: 26px;
-
       width: 100%;
       height: 100%;
 
+      cursor: pointer;
+      font-size: 26px;
+      
       color: navy;
       text-overflow: ellipsis;
       overflow: hidden;
