--- a/src/app/pages/account/account.component.scss
+++ b/src/app/pages/account/account.component.scss
@@ -11,3 +11,48 @@
   justify-content: center;
   margin: 80px 100px;
 }
+
+.user-data {
+  width: 50%;
+  margin: 0 auto;
+
+  &__form {
+    width: 80%;
+
+    padding: 20px;
+    margin: 0 auto;
+
+    background: #e9e9e9;
+    border-radius: 6px;
+  }
+
+  &__control {
+    display: grid;
+    grid-gap: 10px;
+    width: 50%;
+    margin: 30px auto;
+
+    &--spaces {
+      margin: 10px 25%;
+      width: 80px;
+    }
+  }
+
+  &__login {
+    margin: 20px 10%;
+    margin-bottom: 60px;
+
+    font-size: 24px;
+  }
+}
+
+input {
+  &.ng-invalid:not(.ng-pristine) {
+    border: 1px solid red;
+  }
+}
+
+button {
+  margin-top: 20px;
+  font-size: 18px;
+}
