--- a/src/app/ui/advertisement/advertisement-catalog.component.scss
+++ b/src/app/ui/advertisement/advertisement-catalog.component.scss
@@ -25,13 +25,12 @@
     height: 60px;
     margin-bottom: 10px;
 
-    &--title {
+    &--title,
+    &--title-pointer {
       width: 100%;
       height: 100%;
-
-      cursor: pointer;
       font-size: 26px;
-      
+
       color: navy;
       text-overflow: ellipsis;
       overflow: hidden;
@@ -39,8 +38,12 @@
       word-break: break-word;
     }
 
+    &--title-pointer {
+      cursor: pointer;
+    }
+
     &--control {
-      margin-left: -8px;
+      margin-right: -8px;
       margin-top: -10px;
 
       cursor: pointer;
