--- a/src/app/pages/account/account.component.scss
+++ b/src/app/pages/account/account.component.scss
@@ -9,7 +9,7 @@
   display: flex;
   gap: 50px;
   justify-content: center;
-  margin: 80px 100px;
+  margin: 3% 100px;
 }
 
 .user-data {
@@ -21,6 +21,7 @@
 
     padding: 20px;
     margin: 0 auto;
+    margin-bottom: 100px;
 
     background: #e9e9e9;
     border-radius: 6px;
@@ -30,7 +31,7 @@
     display: grid;
     grid-gap: 10px;
     width: 50%;
-    margin: 30px auto;
+    margin: 7% auto;
 
     &--spaces {
       margin: 10px 25%;
