--- a/src/app/ui/advertisement-list/advertisement-list.component.scss
+++ b/src/app/ui/advertisement-list/advertisement-list.component.scss
@@ -7,7 +7,7 @@ input {
   justify-content: space-around;
 }
 .ads {
-  margin: 40px auto;
+  margin: 2% auto;
   width: 80%;
 
   display: flex;
@@ -16,12 +16,12 @@ input {
 }
 
 .ad-container--grid {
-  width: 28%;
+  width: 30%;
 }
 
 .ad-container--center {
-  margin: 0 200px;
-  width: 50%;
+  margin: 0 10%;
+  width: 60%;
 }
 
 .list-view-control {
@@ -76,7 +76,6 @@ input {
     margin-top: 20px;
     user-select: none;
   }
-
 
   &__area {
     display: flex;
