--- a/src/app/ui/authorization-dialog/authorization-dialog.component.html
+++ b/src/app/ui/authorization-dialog/authorization-dialog.component.html
@@ -2,7 +2,7 @@
   <div class="dialog">
     <h1 class="dialog__title" mat-dialog-title>Welcome to our web-site</h1>
     <div class="dialog__body" mat-dialog-content>
-      We have noticed that you haven't been registered yet. Before we proceed, please sign in.
+      We have noticed that you haven't logged on yet. Before we proceed, please sign in.
     </div>
     <div mat-dialog-actions>
       <button
